[package]
name = "unpack"
version = "0.2.2"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
license = "MIT"
description = "Command line utility that unpacks archives, a maintained version of 'unbox'."
readme = "README.md"
repository = "https://github.com/Byron/unpack"
homepage = "https://github.com/Byron/unpack"
documentation = "https://github.com/Byron/unpack"
include = ["src/**/*", "README.md"]

[dependencies]
clap = "2.32.0"
zip = "0.5.0"
failure = "0.1.3"
indicatif = "0.15.0"
tree_magic = { version = "0.2.1", features = ["staticmime"] }
uuid = { version = "0.8.1", features = ["v4"] }
regex = "1.1.0"
lazy_static = "1.2.0"
tar = "0.4.20"
console = "0.14.0"
libflate = "1.0.3"
xz2 = "0.1.6"
bzip2 = "0.4.1"
petgraph = "0.5.1"
strum = "0.20.0"
strum_macros = "0.20.1"
ar = "0.8.0"
cab = "0.2.0"
memmap = "0.7.0"
owning_ref = "0.4.0"
stable_deref_trait = "1.1.1"
goblin = { version = "0.3.0", features = ["pe32", "pe64", "std"], default_features = false }
